--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "gulp-webp": "^4.0.1",
     "gulp-webp-html-nosvg": "^1.1.1",
     "gulp-webpcss": "^1.1.1",
+    "modern-normalize": "^1.1.0",
     "sass": "^1.58.0",
     "webp-converter": "^2.2.3"
   }
